--- a/AndroidScout/app/src/main/res/layout/activity_main.xml
+++ b/AndroidScout/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,202 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
+    android:background="@android:color/black"
+
     tools:context="com.tribetech4485.androidscout.MainActivity">
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="49dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="7dp"
+        android:fontFamily="sans-serif-smallcaps"
+        android:text="Tribe Tech 4485"
+        android:textAlignment="center"
+        android:textColor="@android:color/white"
+        android:textSize="40sp"
+        android:textStyle="bold"
+        android:typeface="normal"
+        app:layout_constraintLeft_toRightOf="@+id/imageView"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@mipmap/ic_launcher"
+        android:layout_marginLeft="13dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginStart="13dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp" />
+
+    <ScrollView
+        android:layout_width="376dp"
+        android:layout_height="fill_parent"
+        android:paddingTop="15dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="41dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <EditText
+                android:id="@+id/teamNumberText"
+                style="@style/AppTheme"
+                android:layout_width="match_parent"
+                android:layout_height="43dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:background="@drawable/back"
+                android:ems="10"
+                android:hint="Enter Team Number"
+                android:inputType="number"
+                android:textAlignment="center"
+                android:textColor="@android:color/white"
+                android:textColorHint="#AAAAAA"
+                android:visibility="visible"
+                app:layout_constraintHorizontal_bias="0.503"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                tools:layout_editor_absoluteX="-47dp"
+                tools:layout_editor_absoluteY="56dp" />
+
+            <EditText
+                android:id="@+id/teamNameText"
+                style="@style/AppTheme"
+                android:layout_width="match_parent"
+                android:layout_height="43dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="30dp"
+                android:background="@drawable/back"
+                android:ems="10"
+                android:hint="Enter Team Name"
+                android:inputType="textNoSuggestions"
+                android:textAlignment="center"
+                android:textColor="@android:color/white"
+                android:textColorHint="#AAAAAA"
+                android:visibility="visible"
+                app:layout_constraintHorizontal_bias="0.503"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                tools:layout_editor_absoluteX="-47dp"
+                tools:layout_editor_absoluteY="56dp" />
+
+            <EditText
+                android:id="@+id/teamScaleRatingText"
+                style="@style/AppTheme"
+                android:layout_width="match_parent"
+                android:layout_height="43dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="30dp"
+                android:background="@drawable/back"
+                android:ems="10"
+                android:hint="Scale Performance Rating (0-10)"
+                android:inputType="numberDecimal"
+                android:textAlignment="center"
+                android:textColor="@android:color/white"
+                android:textColorHint="#AAAAAA"
+                android:visibility="visible"
+                app:layout_constraintHorizontal_bias="0.503"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                tools:layout_editor_absoluteX="-47dp"
+                tools:layout_editor_absoluteY="56dp" />
+
+            <EditText
+                android:id="@+id/teamSwitchRatingText"
+                style="@style/AppTheme"
+                android:layout_width="match_parent"
+                android:layout_height="43dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="30dp"
+                android:background="@drawable/back"
+                android:ems="10"
+                android:hint="Switch Performance Rating (0-10)"
+                android:inputType="numberDecimal"
+                android:textAlignment="center"
+                android:textColor="@android:color/white"
+                android:textColorHint="#AAAAAA"
+                android:visibility="visible"
+                app:layout_constraintHorizontal_bias="0.503"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                tools:layout_editor_absoluteX="-47dp"
+                tools:layout_editor_absoluteY="56dp" />
+
+            <EditText
+                android:id="@+id/teamOtherInfoText"
+                style="@style/AppTheme"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="60dp"
+                android:background="@drawable/back"
+                android:ems="10"
+                android:hint="Other Information (Optional)"
+                android:inputType="textImeMultiLine"
+                android:textAlignment="center"
+                android:textColor="@android:color/white"
+                android:textColorHint="#AAAAAA"
+                android:visibility="visible"
+                app:layout_constraintHorizontal_bias="0.503"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                tools:layout_editor_absoluteX="-47dp"
+                tools:layout_editor_absoluteY="56dp" />
+
+            <Button
+                android:id="@+id/appendToDataButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:background="@drawable/btn_back"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="15dp"
+
+                android:textColor="#AAAAAA"
+                android:textAllCaps="false"
+                android:textSize="20sp"
+
+                android:text="Save Data" />
+
+            <Button
+                android:id="@+id/uploadConnectButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:background="@drawable/btn_back"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="15dp"
+
+                android:textColor="#AAAAAA"
+                android:textAllCaps="false"
+                android:textSize="20sp"
+
+
+
+                android:text="Upload Data To Server" />
+
+        </LinearLayout>
+    </ScrollView>
 
 </android.support.constraint.ConstraintLayout>
