--- a/AndroidScout/app/src/main/res/drawable/border_normal.xml
+++ b/AndroidScout/app/src/main/res/drawable/border_normal.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
     <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
         <solid android:color="#000000" />
-        <stroke android:width="1dip" android:color="#9900EE"/>
+        <stroke android:width="1dip" android:color="#FF6E00"/>
+
+        <!--<solid android:color="#000000" />
+        <stroke android:width="1dip" android:color="#9900EE"/> -->
     </shape>
