--- a/AndroidScout/app/src/main/res/layout/activity_main.xml
+++ b/AndroidScout/app/src/main/res/layout/activity_main.xml
@@ -54,7 +54,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginStart="13dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp" />
+        android:layout_marginTop="8dp"
+        android:scaleType="fitXY"/>
 
     <ScrollView
         android:layout_width="376dp"
