--- a/AndroidScout/app/src/main/res/layout/activity_connect_and_send.xml
+++ b/AndroidScout/app/src/main/res/layout/activity_connect_and_send.xml
@@ -100,10 +100,67 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:textSize="20sp"
+
                 android:textColor="#AAAAAA"
                 android:textAlignment="center"
                 android:layout_marginTop="15dp"
                 android:text="TextView" />
+
+            <EditText
+                android:id="@+id/nameText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:inputType="text"
+
+                android:hint="Device Name"
+
+                android:background="@drawable/back"
+                android:textColor="#FFFFFF"
+                android:textColorHint="#AAAAAA"
+
+                android:textAlignment="center"
+                android:layout_marginTop="60dp"
+                android:text="" />
+
+            <EditText
+                android:id="@+id/addressText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:inputType="text"
+
+                android:hint="MAC Address"
+
+                android:background="@drawable/back"
+                android:textColor="#FFFFFF"
+                android:textColorHint="#AAAAAA"
+
+                android:textAlignment="center"
+                android:layout_marginTop="15dp"
+                android:text="" />
+
+            <Button
+                android:id="@+id/saveAddrName"
+                android:layout_width="match_parent"
+                android:layout_height="27dp"
+
+                android:background="@drawable/btn_back"
+
+                android:textColor="#AAAAAA"
+                android:textAllCaps="false"
+                android:textSize="15sp"
+
+                android:onClick="saveAddrDataBtn"
+
+
+                android:layout_marginTop="15dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+
+                android:text="Send Data" />
 
         </LinearLayout>
     </ScrollView>
