--- a/AndroidScout/app/src/main/res/layout/activity_connect_and_send.xml
+++ b/AndroidScout/app/src/main/res/layout/activity_connect_and_send.xml
@@ -9,6 +9,13 @@
 
     tools:context="com.tribetech4485.androidscout.ConnectAndSendActivity">
 
+    <!-- Dummy item to prevent AutoCompleteTextView from receiving focus -->
+    <LinearLayout
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:layout_width="0px"
+        android:layout_height="0px"/>
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
@@ -121,7 +128,7 @@
                 android:textColorHint="#AAAAAA"
 
                 android:textAlignment="center"
-                android:layout_marginTop="60dp"
+                android:layout_marginTop="190dp"
                 android:text="" />
 
             <EditText
