--- a/AndroidScout/app/src/main/res/layout/activity_main.xml
+++ b/AndroidScout/app/src/main/res/layout/activity_main.xml
@@ -76,7 +76,6 @@
 
             <EditText
                 android:id="@+id/teamNumberText"
-                style="@style/AppTheme"
                 android:layout_width="match_parent"
                 android:layout_height="43dp"
                 android:layout_marginLeft="8dp"
@@ -97,7 +96,6 @@
 
             <EditText
                 android:id="@+id/teamNameText"
-                style="@style/AppTheme"
                 android:layout_width="match_parent"
                 android:layout_height="43dp"
                 android:layout_marginLeft="8dp"
@@ -117,49 +115,47 @@
                 tools:layout_editor_absoluteX="-47dp"
                 tools:layout_editor_absoluteY="56dp" />
 
-            <EditText
-                android:id="@+id/teamScaleRatingText"
-                style="@style/AppTheme"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="43dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginTop="30dp"
-                android:background="@drawable/back"
-                android:ems="10"
-                android:hint="Scale Performance Rating (0-10)"
-                android:inputType="numberDecimal"
-                android:textAlignment="center"
-                android:textColor="@android:color/white"
-                android:textColorHint="#AAAAAA"
-                android:visibility="visible"
-                app:layout_constraintHorizontal_bias="0.503"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                tools:layout_editor_absoluteX="-47dp"
-                tools:layout_editor_absoluteY="56dp" />
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
 
-            <EditText
-                android:id="@+id/teamSwitchRatingText"
-                style="@style/AppTheme"
-                android:layout_width="match_parent"
-                android:layout_height="43dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginTop="30dp"
-                android:background="@drawable/back"
-                android:ems="10"
-                android:hint="Switch Performance Rating (0-10)"
-                android:inputType="numberDecimal"
-                android:textAlignment="center"
-                android:textColor="@android:color/white"
-                android:textColorHint="#AAAAAA"
-                android:visibility="visible"
-                app:layout_constraintHorizontal_bias="0.503"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                tools:layout_editor_absoluteX="-47dp"
-                tools:layout_editor_absoluteY="56dp" />
+                <CheckedTextView
+                    android:id="@+id/autoRunCheckedTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="43dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_marginTop="30dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/back"
+                    android:checkMark="?android:attr/listChoiceIndicatorMultiple"
+                    android:checked="false"
+                    android:ems="10"
+                    android:gravity="center"
+                    android:paddingLeft="15dp"
+                    android:text="Auto Run"
+                    android:textColor="#AAAAAA" />
+
+                <CheckedTextView
+                    android:id="@+id/autoSwitchCheckedTextView"
+
+                    android:layout_width="match_parent"
+                    android:layout_height="43dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_marginTop="30dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/back"
+                    android:checkMark="?android:attr/listChoiceIndicatorMultiple"
+                    android:checked="false"
+                    android:ems="10"
+                    android:gravity="center"
+                    android:paddingLeft="15dp"
+                    android:text="Auto Switch"
+                    android:textColor="#AAAAAA" />
+
+            </LinearLayout>
 
             <EditText
                 android:id="@+id/teamOtherInfoText"
