--- a/AndroidScout/app/src/main/res/layout/activity_main.xml
+++ b/AndroidScout/app/src/main/res/layout/activity_main.xml
@@ -116,7 +116,7 @@
                 tools:layout_editor_absoluteY="56dp" />
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/autoTextView"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_marginTop="20dp"
@@ -166,6 +166,87 @@
 
             </LinearLayout>
 
+            <TextView
+                android:id="@+id/TeleOpTextView"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_marginTop="20dp"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:textSize="20sp"
+                android:textAlignment="center"
+                android:textColor="@android:color/white"
+                android:text="TeleOp" />
+            
+
+            <TextView
+                android:id="@+id/powerUpTextView"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_marginTop="20dp"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:textSize="20sp"
+                android:textAlignment="center"
+                android:textColor="@android:color/white"
+                android:text="Power Ups" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <CheckedTextView
+                    android:id="@+id/PowerUpBoostCheckedTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="43dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/back"
+                    android:checkMark="?android:attr/listChoiceIndicatorMultiple"
+                    android:checked="false"
+                    android:ems="10"
+                    android:gravity="center"
+                    android:paddingLeft="15dp"
+                    android:text="Boost"
+                    android:textColor="#AAAAAA" />
+
+                <CheckedTextView
+                    android:id="@+id/PowerUpForceCheckedTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="43dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/back"
+                    android:checkMark="?android:attr/listChoiceIndicatorMultiple"
+                    android:checked="false"
+                    android:ems="10"
+                    android:gravity="center"
+                    android:paddingLeft="15dp"
+                    android:text="Force"
+                    android:textColor="#AAAAAA" />
+
+                <CheckedTextView
+                    android:id="@+id/PowerUpLevitateCheckedTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="43dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/back"
+                    android:checkMark="?android:attr/listChoiceIndicatorMultiple"
+                    android:checked="false"
+                    android:ems="10"
+                    android:gravity="center"
+                    android:paddingLeft="15dp"
+                    android:text="Levitate"
+                    android:textColor="#AAAAAA" />
+
+            </LinearLayout>
+
             <EditText
                 android:id="@+id/teamOtherInfoText"
                 style="@style/AppTheme"
@@ -173,7 +254,7 @@
                 android:layout_height="200dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
-                android:layout_marginTop="60dp"
+                android:layout_marginTop="40dp"
                 android:background="@drawable/back"
                 android:ems="10"
                 android:hint="Other Information (Optional)"
@@ -231,6 +312,7 @@
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginTop="15dp"
+                android:layout_marginBottom="25dp"
                 android:layout_weight="1"
 
                 android:background="@drawable/btn_back"
@@ -240,27 +322,6 @@
 
                 android:textColor="#AAAAAA"
                 android:textSize="20sp" />
-
-            <TextView
-                android:id="@+id/messageText"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="7dp"
-                android:fontFamily="sans-serif-smallcaps"
-                android:text=""
-                android:textAlignment="center"
-                android:textColor="@android:color/white"
-                android:textSize="15sp"
-                android:textStyle="bold"
-                android:typeface="normal"
-                app:layout_constraintLeft_toRightOf="@+id/imageView"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                />
 
         </LinearLayout>
     </ScrollView>
