--- a/AndroidScout/app/src/main/res/layout/activity_main.xml
+++ b/AndroidScout/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
+    xmlns:numberpicker="http://shemas.android.com/apk/res-auto"
     android:background="@android:color/black"
 
     tools:context="com.tribetech4485.androidscout.MainActivity">
@@ -58,7 +58,7 @@
         android:scaleType="fitXY"/>
 
     <ScrollView
-        android:layout_width="376dp"
+        android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:paddingTop="15dp"
         android:layout_marginLeft="8dp"
@@ -177,7 +177,15 @@
                 android:textAlignment="center"
                 android:textColor="@android:color/white"
                 android:text="TeleOp" />
-            
+
+            <com.travijuu.numberpicker.library.NumberPicker
+                android:id="@+id/number_picker_custom"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                numberpicker:custom_layout="@layout/number_picker_layout"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="15dp"
+                />
 
             <TextView
                 android:id="@+id/powerUpTextView"
@@ -195,6 +203,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="15dp"
                 android:orientation="horizontal">
 
                 <CheckedTextView
