--- a/AndroidScout/app/src/main/res/layout/activity_main.xml
+++ b/AndroidScout/app/src/main/res/layout/activity_main.xml
@@ -1,28 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:numberpicker="http://shemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:numberpicker="http://shemas.android.com/apk/res-auto"
     android:background="@android:color/black"
 
     tools:context="com.tribetech4485.androidscout.MainActivity">
 
     <!-- Dummy item to prevent AutoCompleteTextView from receiving focus -->
     <LinearLayout
-        android:focusable="true"
-        android:focusableInTouchMode="true"
         android:layout_width="0px"
-        android:layout_height="0px"/>
+        android:layout_height="0px"
+        android:focusable="true"
+        android:focusableInTouchMode="true" />
 
     <!-- :nextFocusUp and :nextFocusLeft have been set to the id of this component
     to prevent the dummy from receiving focus again -->
-    <AutoCompleteTextView android:id="@+id/autotext"
+    <AutoCompleteTextView
+        android:id="@+id/autotext"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:nextFocusUp="@id/autotext"
-        android:nextFocusLeft="@id/autotext"/>
+        android:nextFocusLeft="@id/autotext"
+        android:nextFocusUp="@id/autotext" />
 
     <TextView
         android:id="@+id/textView"
@@ -42,31 +43,30 @@
         android:typeface="normal"
         app:layout_constraintLeft_toRightOf="@+id/imageView"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@mipmap/ic_launcher"
         android:layout_marginLeft="13dp"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginStart="13dp"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
-        android:scaleType="fitXY"/>
+        android:scaleType="fitXY"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@mipmap/ic_launcher" />
 
     <ScrollView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:paddingTop="15dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="50dp"
+        android:paddingTop="15dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView">
 
         <LinearLayout
@@ -120,12 +120,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_marginTop="20dp"
-                android:gravity="center"
                 android:layout_weight="1"
-                android:textSize="20sp"
+                android:gravity="center"
+                android:text="Auto"
                 android:textAlignment="center"
                 android:textColor="@android:color/white"
-                android:text="Auto" />
+                android:textSize="20sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -167,48 +167,101 @@
             </LinearLayout>
 
             <TextView
-                android:id="@+id/TeleOpTextView"
+                android:id="@+id/teleOpTextView"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_marginTop="20dp"
-                android:gravity="center"
                 android:layout_weight="1"
-                android:textSize="20sp"
+                android:gravity="center"
+                android:text="TeleOp"
                 android:textAlignment="center"
                 android:textColor="@android:color/white"
-                android:text="TeleOp" />
+                android:textSize="20sp" />
 
-            <com.travijuu.numberpicker.library.NumberPicker
-                android:id="@+id/number_picker_custom"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="45dp"
-                numberpicker:custom_layout="@layout/number_picker_layout"
-                android:layout_marginTop="15dp"
-                android:layout_marginBottom="15dp"
-                />
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/switchNumberOfCratesTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="# of Crates (Switch)"
+                    android:textAlignment="center"
+                    android:textColor="@android:color/white"
+                    android:textSize="15sp" />
+
+                <com.travijuu.numberpicker.library.NumberPicker
+                    android:id="@+id/switchNumberOfCratesNumberPicker"
+                    android:layout_width="wrap_content"
+                    android:layout_height="45dp"
+                    android:layout_gravity="end"
+                    numberpicker:custom_layout="@layout/number_picker_layout"
+                    numberpicker:focusable="false"
+                    numberpicker:max="15"
+                    numberpicker:min="0"
+                    numberpicker:unit="1"
+                    numberpicker:value="0" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/scaleNumberOfCratesTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="# of Crates (Scale)"
+                    android:textAlignment="center"
+                    android:textColor="@android:color/white"
+                    android:textSize="15sp" />
+
+                <com.travijuu.numberpicker.library.NumberPicker
+                    android:id="@+id/scaleNumberOfCratesNumberPicker"
+                    android:layout_width="wrap_content"
+                    android:layout_height="45dp"
+                    android:layout_gravity="end"
+                    numberpicker:custom_layout="@layout/number_picker_layout"
+                    numberpicker:focusable="false"
+                    numberpicker:max="15"
+                    numberpicker:min="0"
+                    numberpicker:unit="1"
+                    numberpicker:value="0" />
+
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/powerUpTextView"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_marginTop="20dp"
-                android:gravity="center"
                 android:layout_weight="1"
-                android:textSize="20sp"
+                android:gravity="center"
+                android:text="Power Ups"
                 android:textAlignment="center"
                 android:textColor="@android:color/white"
-                android:text="Power Ups" />
+                android:textSize="20sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:layout_marginTop="15dp"
                 android:layout_marginBottom="15dp"
+                android:layout_marginTop="15dp"
+                android:layout_weight="1"
                 android:orientation="horizontal">
 
                 <CheckedTextView
-                    android:id="@+id/PowerUpBoostCheckedTextView"
+                    android:id="@+id/powerUpBoostCheckedTextView"
                     android:layout_width="match_parent"
                     android:layout_height="43dp"
                     android:layout_marginLeft="8dp"
@@ -224,7 +277,7 @@
                     android:textColor="#AAAAAA" />
 
                 <CheckedTextView
-                    android:id="@+id/PowerUpForceCheckedTextView"
+                    android:id="@+id/powerUpForceCheckedTextView"
                     android:layout_width="match_parent"
                     android:layout_height="43dp"
                     android:layout_marginLeft="8dp"
@@ -240,7 +293,7 @@
                     android:textColor="#AAAAAA" />
 
                 <CheckedTextView
-                    android:id="@+id/PowerUpLevitateCheckedTextView"
+                    android:id="@+id/powerUpLevitateCheckedTextView"
                     android:layout_width="match_parent"
                     android:layout_height="43dp"
                     android:layout_marginLeft="8dp"
@@ -319,10 +372,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
 
+                android:layout_marginBottom="25dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginTop="15dp"
-                android:layout_marginBottom="25dp"
                 android:layout_weight="1"
 
                 android:background="@drawable/btn_back"
