--- a/AndroidScout/app/src/main/res/values/colors.xml
+++ b/AndroidScout/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="my_spinner_text_color">#AAAAAA</color>
 </resources>
