Reworked spinner bc it sucked before. It works better now.

--- a/AndroidScout/app/src/main/res/layout/activity_main.xml
+++ b/AndroidScout/app/src/main/res/layout/activity_main.xml
@@ -430,8 +430,7 @@
                 android:layout_gravity="end"
                 android:focusable="false"
                 android:background="@drawable/back"
-                android:theme="@style/mySpinnerItemStyle"
-                android:entries="@array/drive_types" />
+                android:theme="@style/mySpinnerItemStyle" />
 
         </LinearLayout>
 
